[package]
name        = "flo_script"
version     = "0.1.0"
authors     = ["Andrew Hunter <andrew@logicalshift.co.uk>"]
edition     = "2018"

[dependencies]
futures         = "0.1"
gluon           = "0.12"
gluon_vm        = "0.12"
gluon_base      = "0.12"
gluon_codegen   = "0.12"
desync          = "0.4"
lazy_static     = "1.3"
